# FraudDetection

./: CMakeLists.txt  Readme.md  com_db_dump.sql  file1.txt  file2.txt  rule1.txt  rule2.txt
cmake/: FindMySQL.cmake
data/: account_info.csv  transactions.csv
include/: mysql_helper.h
misc/mysql/: mysql_version.h
src/: main.cpp
tests/: test.cpp
